# qtProperTree

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: build-macos.yml
examples/: config.plist
propertree/: config_tex_info.py  plist.py  qt_app.py  qt_converter_window.py  qt_delegates.py  qt_plist_window.py  qt_settings_window.py  qt_workers.py
tests/: test_plist_window.py
