[project]
name = "qtpropertree"
version = "0.1.0"
description = "A cross-platform Qt plist editor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0,<7.0.0",
]

[dependency-groups]
dev = ["pyinstaller>=6.0", "pytest>=8.0", "ruff>=0.9.0"]

[tool.uv]
python-preference = "only-managed"

[project.scripts]
qtpropertree = "main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
